--- a/Largest.Application/Largest.Application.csproj
+++ b/Largest.Application/Largest.Application.csproj
@@ -9,6 +9,7 @@
     <PackageReference Include="BCrypt.Net-Next" Version="4.0.3" />
     <PackageReference Include="Microsoft.Extensions.Configuration" Version="10.0.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="10.0.0" />
+    <PackageReference Include="QuestPDF" Version="2025.12.1" />
 	  <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="8.0.1" />
 	  <PackageReference Include="Microsoft.IdentityModel.Tokens" Version="8.0.1" />
 	  
